--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🥖</text></svg>" />
+    <link rel="icon" type="image/svg+xml"
+      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23C9A227' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'><path d='M12 3c-4.97 0-9 4.03-9 9s4.03 9 9 9 9-4.03 9-9-4.03-9-9-9z'/><path d='M12 8v4l3 3'/><circle cx='12' cy='12' r='9' stroke-dasharray='2 4'/></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Priyanga | Handcrafted Luxury Bakery</title>
     <meta name="description" content="Experience the finest handcrafted pastries, bread, and desserts at Priyanga Luxury Bakery. Elegance in every bite." />
